[package]
name = "officer_velvet"
version = "0.1.0"
authors = ["Aurorans Solis <primalucegd@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
chrono = "0.4.19"
crossbeam-channel = "0.5.0"
lazy_static = "1.4.0"
rand = "0.8.3"
regex = "1.4.3"
serde = "1.0.123"
serde_json = "1.0.62"
sled = "0.34.6"
structopt = "0.3.21"

[dependencies.tokio]
version = "1.2.0"
features = ["fs", "macros", "rt-multi-thread", "signal", "time"]

[dependencies.serenity]
version = "0.10.2"
features = ["cache", "framework", "rustls_backend", "standard_framework"]
