[package]
name = "officer_velvet"
version = "0.1.0"
authors = ["Aurorans Solis <primalucegd@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
chrono = "0.4"
crossbeam-channel = "0.5"
futures = "0.3"
lazy_static = "1.4"
rand = "0.8"
regex = "1.4"
serde = "1"
serde_json = "1"
sled = "0.34"
structopt = "0.3"
tracing = "0.1"

[dependencies.tokio]
version = "1.2"
features = ["fs", "macros", "rt-multi-thread", "signal", "time"]

[dependencies.serenity]
version = "0.10"
features = ["cache", "extras", "framework", "rustls_backend", "standard_framework"]
