[package]
name = "officer_velvet"
version = "0.1.0"
authors = ["Aurorans Solis <primalucegd@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
chrono = "0.4"
crossbeam-channel = "0.5"
futures = "0.3"
lazy_static = "1.4"
rand = "0.8"
regex = "1.4"
serde_json = "1"
sled = "0.34"
tracing = "0.1"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.serde]
version = "1"
features = ["derive", "alloc"]

[dependencies.serenity]
version = "0.11.6"
features = ["cache", "extras", "framework", "standard_framework"]

[dependencies.tokio]
version = "1.2"
features = ["fs", "macros", "rt-multi-thread", "signal", "time"]
